// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render 1`] = `
<DocumentFragment>
  <div>
    <svg>
      welcome-banner.svg
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Image should render nothing if image can't be found 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`Image should render with domain 1`] = `
<DocumentFragment>
  <div>
    <svg>
      exchange-cards-banner.svg
    </svg>
  </div>
</DocumentFragment>
`;
